# logtoools

./: Makefile  Makefile.in  README.md  bulk-virtual-webalizer.txt  clfdomainsplit.1  clfdomainsplit.cfg  clfdomainsplit.cpp  clfmerge.1  clfmerge.cpp  clfsplit.1  clfsplit.cpp  configure  configure.in  funnel.1  funnel.cpp  getweblogs  logprn.1  logprn.cpp  logtools.h  logtools.h.in  sample-webalizer.conf
debian/: changelog  conffiles  control  copyright  rules
sun/: Makefile  pkginfo  pkginfo.in  prototype
